--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
-    "mongoose": "^5.13.23",
+    "mongoose": ">=6.13.6",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
     "newrelic": "^12.12.0",
